[package]
name = "raytrace"
version = "0.1.0"
authors = ["Sebastian Paarmann <sebastian.paarmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
rand = "0.7"
crossbeam-utils = "0.7"
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"
typetag = "0.1"
erased-serde = "0.3"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false
